--- a/config
+++ b/config
@@ -3,7 +3,7 @@ DEFAULT_ITEM_ATTR="#[fg=cyan,bg=blue]"
 PREFIX="#[fg=white]{"
 SUFFIX="#[fg=white]}"
 
-SCRIPTS="hostname iTunes battery weather time"
+SCRIPTS="hostname ip iTunes battery weather time"
 
 # Script-specific settings need to be exported explicitly.
 export WEATHER_STATION="KORPORTL169"
