--- a/config
+++ b/config
@@ -1,5 +1,5 @@
-SEPARATOR="#[fg=white,bg=blue]/"
-DEFAULT_ITEM_ATTR="#[fg=cyan,bg=blue]"
+SEPARATOR="#[fg=white,bg=black]/"
+DEFAULT_ITEM_ATTR="#[fg=cyan,bg=black]"
 PREFIX="#[fg=white]{"
 SUFFIX="#[fg=white]}"
 
